# artifacts/api-server/src/routes/index.ts
@@ -5,7 +5,6 @@ import tasksRouter from "./tasks";
 import indicatorsRouter from "./indicators";
 import targetsRouter from "./targets";
 import resultsRouter from "./results";
-import evidenceRouter from "./evidence";
 import reviewsRouter from "./reviews";
 import feedbackRouter from "./feedback";
 import usersRouter from "./users";
@@ -35,7 +34,6 @@ router.use(tasksRouter);
 router.use(indicatorsRouter);
 router.use(targetsRouter);
 router.use(resultsRouter);
-router.use(evidenceRouter);
 router.use(reviewsRouter);
 router.use(feedbackRouter);
 router.use(usersRouter);
